Mas textos index y sidebar arreglada

--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -201,7 +201,7 @@
 					<h2 class="h1 pi-text-shadow">
 						Bienvenido a <span class="pi-text-base">HeliconiaTech</span>
 					</h2>					
-					<p class="lead-18 pi-weight-300 pi-margin-bottom-30" style="padding: 0 21%;">
+					<p class="lead-18 pi-weight-300 pi-margin-bottom-30" style="padding: 0 26%;">
 						<span class="pi-text-base">HeliconiaTech</span>, una empresa de ingeniería que hace realidad tus ideas y les da vida usando tecnología de punta 
 					</p>
 					<p>
@@ -221,13 +221,17 @@
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
 			<div class="pi-section-w pi-section-dark">
 				<div class="pi-texture" style="background: url(img/textura01.png) repeat;"></div>
-				<div class="pi-section pi-padding-top-60 pi-padding-bottom-40">
-					<p class="lead-20 pi-text-center">
+				<div class="pi-section pi-padding-top-30 pi-padding-bottom-30">
+					<div class="lead-30 pi-text-center pi-testimonial-content pi-testimonial-content-quotes" style="font-style: italic;color: white;">
+						“GIVE LIFE AND VOICE TO YOUR WORLD”
+					</div>	
+					<div class="lead-20 pi-text-center pi-testimonial-content pi-testimonial-content-quotes" style="padding: 0 0 1.5% 0; color: #18ba60">
+						-HeliconiaTech
+					</div>
+					<p class="lead-20 pi-text-center" style="padding: 0 13%">
 						Ajustándonos a tus necesidades diseñamos una solución a la medida de tu proyecto y la ejecutamos teniendo siempre en mente tu plena satisfacción.
 					</p>
-<!-- 					<div class="lead-30 pi-text-center pi-testimonial-content pi-testimonial-content-quotes" style="font-style: italic">
-						GIVE LIFE AND VOICE TO YOUR WORLD
-					</div> -->
+
 				</div>
 			</div>
 
