--- a/heliconia/services.html
+++ b/heliconia/services.html
@@ -32,9 +32,6 @@
 			background-position: 80% -6px; 
 			background-repeat: no-repeat;
 		}
-		#sidebar {
-			top: 11%;
-		}
 
 		@media only screen and (max-device-width: 480px) and (orientation: portrait) {
 			#location_map {
@@ -64,13 +61,13 @@
 			margin: 0 -21px;
 			border-radius: 50%;
 			box-shadow: inset 0 0 0 16px rgba(255, 255, 255, 0.6), 0 1px 2px rgba(0, 0, 0, 0.3);
-			transform: scale(0);
 			-webkit-transform: scale(0);
+			transform: scale(0);
 		}
 
 		.ht-service-icon .img6:hover:before {
-			transform: scale(1);
 			-webkit-transform: scale(1);
+			transform: scale(1);
 			transition: all 0.35s ease-in-out;
 			-webkit-transition: all 0.35s ease-in-out;
 			-moz-transition: all 0.35s ease-in-out;
@@ -96,22 +93,9 @@
 		.ht-subserv:focus .img6:before{
 			box-shadow: inset 0 0 0 110px rgba(0, 0, 0, 0.6), inset 0 0 0 5px rgba(255, 255, 255, 0.8), 0 1px 2px rgba(0, 0, 0, 0.1);
 			transform: scale(1);
+			-webkit-transform: scale(1);
 		}
 
-		.nav select {
-			display: none;
-			margin: 0 auto;
-			margin-bottom: 20px;
-		}
-
-		@media (max-width: 768px) {
-			.nav ul {
-				display: none;
-			}
-			.nav select {
-				display: block;
-			}
-		}
 	</style>
 
 	<div id="pi-all">
@@ -1104,25 +1088,6 @@
 	<script src="scripts/pi.accordion.js"></script>
 	<script src="scripts/pi.init.animations.js"></script>
 	<script src="3dParty/sidebar.js"></script>
-	<script type="text/javascript">
 
-	$(document).ready(function() {    
-		$('.tab_content').hide(); //Esconde todos las descripciones de subservicios
-		$('ul.tab_nav li a').click(function(){ //Cualquier link se la haya hecho click
-		    var current_tab = $(this).closest('.tab_nav').find('.current_tab');
-		    $($(current_tab).attr('href')).hide(); 
-		    current_tab.removeClass('current_tab');
-		    $(this).addClass('current_tab'); //Link se hace activo
-		    $($(this).attr('href')).fadeToggle(1000,'easeInCirc'); 
-		    return false;
-		});
-
-		$(".nav select").change(function() {
-		    $(this).parent().parent().find('.tab_content').hide();
-		    console.log($(this).find("option:selected").attr('href'));
-			$($(this).find("option:selected").attr('href')).fadeToggle('slow'); 
-		});
-	});
-	</script>
 </body>
 </html>
