--- a/heliconia/services.html
+++ b/heliconia/services.html
@@ -96,6 +96,24 @@
 			-webkit-transform: scale(1);
 		}
 
+		/* Selector subservicios*/
+
+		.nav select {
+			display: none;
+			margin: 0 auto;
+			margin-bottom: 20px;
+		}
+
+		@media (max-width: 768px) {
+			.nav ul {
+				display: none;
+			}
+			.nav select {
+				display: block;
+			}
+		}
+ 	</style>
+
 	</style>
 
 	<div id="pi-all">
@@ -234,7 +252,7 @@
 							Nuestro servicio de
 						</h6>
 						<h2 class="h1 pi-weight-700 pi-uppercase pi-has-border pi-has-tall-border pi-has-short-border">
-							Automatización residencial
+							Automatización
 						</h2>
 					</div>
 					<!-- Row -->
@@ -242,14 +260,17 @@
 						<!-- Col 6 -->
 						<div class="pi-col-sm-6 pi-padding-bottom-40">						
 							<p class="pi-weight-600 pi-text-dark">
-								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+								La solucion de automatización, control y seguridad (conocidas en conjunto como domótica) desarrolladas por nuestros ingenieros convertirá tu mundo en un espacio inteligente. Con una instalación rápida y de bajo impacto podrás disfrutar del cómodo estilo de vida que te ofrece  HeliconiaTech.
 							</p>
-							<ul class="pi-list-with-icons pi-list-icons-ok pi-margin-bottom-30">
-								<li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
-								<li>Nam libero tempore, cum soluta nobis est eligendi optio cumque</li>
-								<li>Temporibus autem quibusdam et aut officiis debitis aut rerum</li>
-								<li>Officiis debitis aut rerum necessitatibus saepe quibusdam</li>
-							</ul>				
+							<p class="pi-weight-600 pi-text-dark">
+								Abre, cierra, apaga, enciende y regula tus electrodomésticos, sistemas de riego, iluminación, ventilación y persianas con un simple clic.
+							</p>
+							<p>
+								<a href="contact.html" class="btn pi-btn-base pi-btn-no-border pi-shadow pi-btn-big">
+									¡Pregúntanos cómo!
+								</a>
+								<span class="pi-clearfix pi-visible-sm"></span>
+							</p>				
 						</div>
 						<!-- End col 6 -->
 						<!-- Col 6 -->
@@ -276,7 +297,7 @@
 								<div class="pi-accordion-content">
 									<div>
 										<p>
-											Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
+											Controla el estado de tu casa en desde cualquier lugar del mundo y en cualquier momento. Con HeliconiaTech es posible integrar los dispositivos de tu hogar, oficina o local comercial desde el televisor hasta la cafetera. Nuestras soluciones hacen de tu hogar un lugar más cómodo, e-ficiente y seguro. 
 										</p>
 									</div>
 								</div>
@@ -291,7 +312,7 @@
 						<!-- Col 10 -->
 						<div class="pi-col-sm-10 pi-col-sm-offset-1 pi-padding-bottom-30">
 							<p class="lead-30 pi-text-dark pi-text-center">
-								Nam libero tempore, <span class="pi-text-bg-base">cum soluta</span> nobis est optio cumque nihil impedit quo minus id quod maxime
+								Con <span class="pi-text-base">HeliconiaTech</span> es posible crear lugares más cómodos, eficientes y seguros. Conoce como puedes transformar tu mundo con un <span class="pi-text-bg-base">simple clic</span>
 							</p>
 						</div>
 						<!-- End col 10 -->
@@ -310,7 +331,7 @@
 											</div>
 										</div>
 										<h6 class="pi-uppercase">
-											Subserv1
+											Iluminación inteligente
 										</h6>
 									</div>
 								</a>
@@ -326,7 +347,7 @@
 											</div>
 										</div>
 										<h6 class="pi-uppercase">
-											Subserv2
+											Control ambiental
 										</h6>
 									</div>
 								</a>
@@ -342,7 +363,7 @@
 											</div>
 										</div>
 										<h6 class="pi-uppercase">
-											Subserv3
+											Supervisión y seguridad
 										</h6>
 									</div>
 								</a>
@@ -358,7 +379,7 @@
 											</div>
 										</div>
 										<h6 class="pi-uppercase">
-											Subserv4
+											Escenas automáticas
 										</h6>
 									</div>
 								</a>
@@ -374,7 +395,7 @@
 											</div>
 										</div>
 										<h6 class="pi-uppercase">
-											Subserv5
+											Entretenimiento
 										</h6>
 									</div>
 								</a>
@@ -390,7 +411,7 @@
 											</div>
 										</div>
 										<h6 class="pi-uppercase">
-											Subserv6
+											Interfaz de usuario
 										</h6>
 									</div>
 								</a>
@@ -408,12 +429,12 @@
 						</select> 
 					</div>
 					<!-- End row -->
-					<!-- Row Subservicios explicacion - Serv1-->
+					<!-- Row Subservicios explicacion - Iluminación inteligente-->
 					<div class="pi-row tab_content" id="subserv11">
 						<!-- Col 6 -->
 						<div class="pi-col-sm-6 pi-padding-bottom-40">
 							<h4 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-bg pi-margin-bottom-20">
-								1 serv
+								Iluminación inteligente
 							</h4>
 							<p class="pi-weight-600 pi-text-dark">
 								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
@@ -435,12 +456,12 @@
 						<!-- End col 6 -->
 					</div>
 					<!-- End row -->
-					<!-- Row Subservicios explicacion - Serv2-->
+					<!-- Row Subservicios explicacion - Control ambiental-->
 					<div class="pi-row tab_content" id="subserv12">
 						<!-- Col 6 -->
 						<div class="pi-col-sm-6 pi-padding-bottom-40">
 							<h4 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-bg pi-margin-bottom-20">
-								2 serv
+								Control ambiental
 							</h4>
 							<p class="pi-weight-600 pi-text-dark">
 								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
@@ -462,6 +483,115 @@
 						<!-- End col 6 -->
 					</div>
 					<!-- End row -->
+					<!-- Row Subservicios explicacion - Supervisión y seguridad-->
+					<div class="pi-row tab_content" id="subserv13">
+						<!-- Col 6 -->
+						<div class="pi-col-sm-6 pi-padding-bottom-40">
+							<h4 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-bg pi-margin-bottom-20">
+								Supervisión y seguridad
+							</h4>
+							<p class="pi-weight-600 pi-text-dark">
+								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+							</p>
+							<ul class="pi-list-with-icons pi-list-icons-ok pi-margin-bottom-30">
+								<li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
+								<li>Nam libero tempore, cum soluta nobis est eligendi optio cumque</li>
+								<li>Temporibus autem quibusdam et aut officiis debitis aut rerum</li>
+								<li>Officiis debitis aut rerum necessitatibus saepe quibusdam</li>
+							</ul>
+						</div>
+						<!-- End col 6 -->
+						<!-- Col 6 -->
+						<div class="pi-col-sm-6 pi-padding-bottom-40">
+							<div class="pi-img-w pi-no-padding-bottom">
+								<img src="img_external/gallery/apple-devices-2.png" alt="" />
+							</div>
+						</div>
+						<!-- End col 6 -->
+					</div>
+					<!-- End row -->
+					<!-- Row Subservicios explicacion - Escenas automáticas-->
+					<div class="pi-row tab_content" id="subserv14">
+						<!-- Col 6 -->
+						<div class="pi-col-sm-6 pi-padding-bottom-40">
+							<h4 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-bg pi-margin-bottom-20">
+								Escenas automáticas
+							</h4>
+							<p class="pi-weight-600 pi-text-dark">
+								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+							</p>
+							<ul class="pi-list-with-icons pi-list-icons-ok pi-margin-bottom-30">
+								<li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
+								<li>Nam libero tempore, cum soluta nobis est eligendi optio cumque</li>
+								<li>Temporibus autem quibusdam et aut officiis debitis aut rerum</li>
+								<li>Officiis debitis aut rerum necessitatibus saepe quibusdam</li>
+							</ul>
+						</div>
+						<!-- End col 6 -->
+						<!-- Col 6 -->
+						<div class="pi-col-sm-6 pi-padding-bottom-40">
+							<div class="pi-img-w pi-no-padding-bottom">
+								<img src="img_external/gallery/apple-devices-2.png" alt="" />
+							</div>
+						</div>
+						<!-- End col 6 -->
+					</div>
+					<!-- End row -->
+					<!-- Row Subservicios explicacion - Entretenimiento-->
+					<div class="pi-row tab_content" id="subserv15">
+						<!-- Col 6 -->
+						<div class="pi-col-sm-6 pi-padding-bottom-40">
+							<h4 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-bg pi-margin-bottom-20">
+								Entretenimiento
+							</h4>
+							<p class="pi-weight-600 pi-text-dark">
+								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+							</p>
+							<ul class="pi-list-with-icons pi-list-icons-ok pi-margin-bottom-30">
+								<li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
+								<li>Nam libero tempore, cum soluta nobis est eligendi optio cumque</li>
+								<li>Temporibus autem quibusdam et aut officiis debitis aut rerum</li>
+								<li>Officiis debitis aut rerum necessitatibus saepe quibusdam</li>
+							</ul>
+						</div>
+						<!-- End col 6 -->
+						<!-- Col 6 -->
+						<div class="pi-col-sm-6 pi-padding-bottom-40">
+							<div class="pi-img-w pi-no-padding-bottom">
+								<img src="img_external/gallery/apple-devices-2.png" alt="" />
+							</div>
+						</div>
+						<!-- End col 6 -->
+					</div>
+					<!-- End row -->
+					<!-- Row Subservicios explicacion - Interfaz de usuario-->
+					<div class="pi-row tab_content" id="subserv16">
+						<!-- Col 6 -->
+						<div class="pi-col-sm-6 pi-padding-bottom-40">
+							<h4 class="pi-weight-700 pi-uppercase pi-letter-spacing pi-has-bg pi-margin-bottom-20">
+								Interfaz de usuario
+							</h4>
+							<p class="pi-weight-600 pi-text-dark">
+								Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+							</p>
+							<ul class="pi-list-with-icons pi-list-icons-ok pi-margin-bottom-30">
+								<li>At vero eos et accusamus et iusto odio dignissimos ducimus</li>
+								<li>Nam libero tempore, cum soluta nobis est eligendi optio cumque</li>
+								<li>Temporibus autem quibusdam et aut officiis debitis aut rerum</li>
+								<li>Officiis debitis aut rerum necessitatibus saepe quibusdam</li>
+							</ul>
+						</div>
+						<!-- End col 6 -->
+						<!-- Col 6 -->
+						<div class="pi-col-sm-6 pi-padding-bottom-40">
+							<div class="pi-img-w pi-no-padding-bottom">
+								<img src="img_external/gallery/apple-devices-2.png" alt="" />
+							</div>
+						</div>
+						<!-- End col 6 -->
+					</div>
+					<!-- End row -->
+
 				</div>
 			</div>
 			<!-- - - - - - - - - - END SECTION - - - - - - - - - -->
@@ -1088,6 +1218,25 @@
 	<script src="scripts/pi.accordion.js"></script>
 	<script src="scripts/pi.init.animations.js"></script>
 	<script src="3dParty/sidebar.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function() {    
+			$('.tab_content').hide(); //Esconde todos las descripciones de subservicios
+			$('ul.tab_nav li a').click(function(){ //Cualquier link se la haya hecho click
+			    var current_tab = $(this).closest('.tab_nav').find('.current_tab');
+			    $($(current_tab).attr('href')).hide(); 
+			    current_tab.removeClass('current_tab');
+			    $(this).addClass('current_tab'); //Link se hace activo
+			    $($(this).attr('href')).fadeToggle(1000,'easeInCirc'); 
+			    return false;
+			});
+	 
+			$(".nav select").change(function() {
+			    $(this).parent().parent().find('.tab_content').hide();
+			    console.log($(this).find("option:selected").attr('href'));
+				$($(this).find("option:selected").attr('href')).fadeToggle('slow'); 
+			});
+		});
+	</script>
 
 </body>
 </html>
