--- a/heliconia/contact.html
+++ b/heliconia/contact.html
@@ -15,7 +15,7 @@
 
 	
 	<!--Fonts-->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
 
 	<!--Fonts with Icons-->
 	<link rel="stylesheet" href="3dParty/fontello/css/fontello.css"/>
@@ -377,7 +377,7 @@
 	<script src="3dParty/jquery-1.11.0.min.js"></script>
 	<script src="3dParty/bootstrap/js/bootstrap.min.js"></script>
 	<script src="scripts/pi.googleMapStyles.js"></script>
-	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+	<script src="https://maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="3dParty/jquery.gmap.min.js"></script>
 	<script src="3dParty/requestAnimationFramePolyfill.min.js"></script>
 	<script src="3dParty/jquery.easing.1.3.js"></script>
