--- a/heliconia/index.html
+++ b/heliconia/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 	<title>HeliconiaTech SAS</title>
 	<link rel="shortcut icon" href="/favicon.ico"/>
+	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 	<link rel="stylesheet" type="text/css" href="3dParty/bootstrap/css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/global.css"/>
 	<link rel="stylesheet" type="text/css" href="3dParty/rs-plugin/css/pi.settings.css"/>
